syntax = "proto3";

package chanchunk.v1;

import "error/v1/error.proto";
import "tagger/tagger.proto";

// |||| SERVICE ||||

service ChannelChunkService {
  rpc Create(stream CreateRequest) returns (CreateResponse);
  rpc Retrieve(RetrieveRequest) returns (stream RetrieveResponse);
  rpc Delete(DeleteRequest) returns (DeleteREsponse);
}

// |||| MODEL ||||

message ChannelChunkReplica {
  string id = 1 [(tagger.tags) = "model:\"role:pk,\""];
  string channel_chunk_id = 2;
  string range_replica_id = 3;
  bytes telem = 4 [(tagger.tags) = "model:\"role:telemChunkData,\""];
}

// |||| CREATE ||||

message CreateRequest {
  ChannelChunkReplica channel_chunk_replica = 1;
}

message CreateResponse {
  error.v1.Error error = 1;
}

// |||| RETRIEVE ||||

message RetrieveResponse {
  ChannelChunkReplica channel_chunk_replica = 1;
}

message RetrieveRequest {
  repeated string pkc = 1;
}

// |||| DELETE ||||

message DeleteRequest {
  repeated string pkc = 1;
}

message DeleteREsponse {
  error.v1.Error error = 1;
}


